# init-app

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
ashmeet/: README.md  manage.py  pyproject.toml  requirements.txt
ashmeet/ash/: apps.py
ashmeet/ashmeet/: asgi.py  settings.py  wsgi.py
ashmeet/src/data/: fetch_data.py
ashmeet/src/models/: train.py
create_app/: __init__.py  cli.py  constants.py  loader.py  logger.py  main.py  prompts.py
create_app/cli/: engine.py
create_app/common/: README.md.tpl  apps.py.tpl  entry.py.tpl  work.txt.tpl
create_app/common/static/css/: style.css.tpl
create_app/common/static/scripts/: script.js.tpl
create_app/common/template/: index.html.tpl
create_app/engine/: cli.py  prompts.py
create_app/engine/ui/: spinner.py  ui_config.py  user_interface.py
create_app/framework/: bundler.py
create_app/generator/: database.py  django.py  engine.py  generator.py  prerequisites.py  renderer.py  venv.py
create_app/initializer/: controller.py  generator.py
create_app/rules/: auto_rules.py  django_rules.py  global_rules.py  others_rules.py  production_rules.py  standard_rules.py
create_app/templates/base/: structure.py
create_app/templates/bottle/minimal/: entry.py.tpl  requirements.txt  structure.py
create_app/templates/bottle/production/: entry.py.tpl  structure.py
create_app/templates/cli/: main.py.tpl  structure.py
create_app/templates/common/: .env.tpl  README.md.tpl  gitignore.tpl  venv.txt.tpl  work.txt.tpl
create_app/templates/common/static/: script.js  style.css
create_app/templates/django/drf/: requirements.txt  rf.py.tpl  secret.tpl  structure.py
create_app/templates/django/minimal/: structure.py
create_app/templates/django/standard/: structure.py
create_app/templates/falcon/: requirements.txt
create_app/templates/falcon/minimal/: entry.py.tpl  structure.py
create_app/templates/falcon/production/: entry.py.tpl  structure.py
create_app/templates/fastapi/minimal/: entry.py.tpl  structure.py
create_app/templates/fastapi/production/: entry.py.tpl  structure.py
create_app/templates/flask/: requirements.txt
create_app/templates/flask/minimal/: entry.py.tpl  structure.py
create_app/templates/flask/production/: entry.py.tpl  structure.py
create_app/templates/pyramid/: requirements.txt
create_app/templates/pyramid/minimal/: entry.py.tpl  requirements.txt  structure.py
create_app/templates/pyramid/production/: entry.py.tpl  requirements.txt  structure.py
create_app/templates/python/cli/: structure.py
create_app/templates/python/minimal/: structure.py
create_app/templates/python/mllabs/: structure.py
create_app/templates/sanic/minimal/: entry.py.tpl  structure.py
create_app/templates/sanic/production/: entry.py.tpl  structure.py
create_app/templates/tornado/minimal/: entry.py.tpl  requirements.txt  (+1 more)
create_app/ui/: interface.py  loader.py  logger.py  prompts.py
docs/: COMMAND_LINE.md  prerequisite.py  requirements.txt
scripts/: build.py  build.sh  bump_version.py  bump_version.sh  clean.py  clean.sh  dev_setup.py  dev_setup.sh  release.py  release.sh
tests/: test_full_matrix.py  test_logic.py
(+10 files in other folders)
