[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "init-app"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "pyfiglet>=1.0.4",
    "readchar>=4.2.1",
    "python-dotenv>=1.2.1",
    "jinja2>=3.1.0"
]

authors = [
  {name = "TechQuanta", email = "techquanta.community@gmail.com"},
  {name="Ashmeet Singh", email="ashmeetsingh0123@gmail.com"},
]
description = "Interactive Python CLI for scaffolding backend projects (Flask, Django, FastAPI, etc.)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "isort>=6.0.0",
    "jinja2>=3.1.0"
]

[project.scripts]
init-app = "create_app.engine.cli:main"

[project.urls]
Homepage = "https://github.com/TechQuanta/init-app"
Documentation = "https://github.com/TechQuanta/init-app#readme"
Source = "https://github.com/TechQuanta/init-app"
Tracker = "https://github.com/TechQuanta/init-app/issues"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"